deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-shop-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-shop-frontend
  template:
    metadata:
      labels:
        app: cms-shop-frontend
    spec:
      containers:
        - name: cms-shop-frontend
          image: cms-shop-frontend
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
