deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-shop-frontend
spec:
  selector:
    app: cms-shop-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
