deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-shop-frontend
  annotations:
    cert-manager.io/cluster-issuer: "cf-teyvatsbyte-issuer-prod"
spec:
  rules:
    - host: www.sellvat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-shop-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - www.sellvat.com
      secretName: tls-shop-sellvat-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-shop-frontend-redirect
  annotations:
    traefik.ingress.kubernetes.io/redirect-regex: "^https?://sellvat.com/(.*)"
    traefik.ingress.kubernetes.io/redirect-replacement: "https://www.sellvat.com/$1"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: "cf-teyvatsbyte-issuer-prod"
spec:
  rules:
    - host: sellvat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-service
                port:
                  number: 80
  tls:
    - hosts:
        - sellvat.com
      secretName: tls-shop-sellvat-secret
